Working pictures drawing and printing

--- a/gk1_lab3/gk1_lab3.csproj
+++ b/gk1_lab3/gk1_lab3.csproj
@@ -61,10 +61,19 @@
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="pictureWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pictureWindow.Designer.cs">
+      <DependentUpon>pictureWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pictureWindow.resx">
+      <DependentUpon>pictureWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
